2009-09-07  Bernd Schmidt  <bernd.schmidt@analog.com>

	From Mike Frysinger  <michael.frysinger@analog.com>
	* gcc.target/bfin/mcpu-bf542m.c: New file.
	* gcc.target/bfin/mcpu-bf544m.c: Likewise.
	* gcc.target/bfin/mcpu-bf546m.c: Likewise.
	* gcc.target/bfin/mcpu-bf548m.c: Likewise.
	* gcc.target/bfin/mcpu-bf549m.c: Likewise.

2009-09-07  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/41282
	* gcc.c-torture/compile/pr41282.c: New test.

2009-09-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/41197
	* gfortran.dg/allocate_alloc_opt_1.f90:  Use scalar
	variables for stat and errmsg.
	* gfortran.dg/deallocate_alloc_opt_1.f90:  Likewise.
	* gfortran.dg/allocate_stat_2.f90:  New test.

2009-09-07  Bernd Schmidt  <bernd.schmidt@analog.com>

	* gcc.c-torture/compile/20090907-1.c: New test.

2009-09-06  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/41241
	* gcc.dg/pr41241.c: New test.

2009-09-06  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41144
	* g++.dg/torture/pr41144.C: New testcase.

2009-09-06  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41261
	* gcc.dg/torture/pr41261.c: New testcase.

2009-09-05  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41181
	* gcc.c-torture/compile/pr41181.c: New testcase.

2009-09-05  Richard Guenther  <rguenther@suse.de>

	PR debug/41273
	* g++.dg/torture/pr41273.C: New testcase.

2009-09-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/41258
	* gfortran.dg/typebound_proc_12.f90 : New test.

2009-09-04  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/41225
	* gfortran.dg/pr41225.f90: New.

2009-09-04  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.dg/guality/guality.h: Include stdint.h.  Drop unnecessary
	unistd.h, sys/types.h and sys/wait.h.
	(gualchk_t): New.
	(GUALCVT): New.
	(GUALCHKXPR, GUALCHKVAL, GUALCHKFLA): Use it.
	(GUALITY_GDB_REDIRECT): New.
	(GUALITY_GDB_ARGS): Use it.

2009-09-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41257
	* g++.dg/torture/pr41257.C: New testcase.
